Fix update book method
