# docs/swagger.json
@@ -331,7 +331,7 @@
                 "summary": "Update a book by ID",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Book ID",
                         "name": "id",
                         "in": "path",
@@ -343,7 +343,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Book"
+                            "$ref": "#/definitions/dto.BookCreateDTO"
                         }
                     }
                 ],
@@ -351,7 +351,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Book"
+                            "$ref": "#/definitions/dto.BookCreateDTO"
                         }
                     },
                     "400": {
@@ -447,52 +447,6 @@
             "type": "object",
             "properties": {
                 "author": {
-                    "type": "string"
-                },
-                "genre": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "published_at": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.Author": {
-            "type": "object",
-            "properties": {
-                "books": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Book"
-                    }
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.Book": {
-            "type": "object",
-            "properties": {
-                "author": {
-                    "$ref": "#/definitions/model.Author"
-                },
-                "authorID": {
                     "type": "string"
                 },
                 "genre": {
